--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FIXME",
+  "name": "Vagabond",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/acadet/web-boilerplate.git"
+    "url": "git+https://github.com/acadet/vagabond.git"
   },
   "author": "Adrien Cadet",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/acadet/web-boilerplate.git"
+    "url": "https://github.com/acadet/vagabond.git"
   },
-  "homepage": "https://github.com/acadet/web-boilerplate#readme",
+  "homepage": "https://github.com/acadet/vagabond#readme",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-concurrent": "^2.3.1",
