--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "grunt-contrib-uglify": "^3.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^2.0.0"
+  },
+  "dependencies": {
+    "node-sass": "^4.13.1"
   }
 }
